--- a/myfile.html
+++ b/myfile.html
@@ -5,7 +5,8 @@
 </head>
 <body>
   <h1>Hello World</h1>
-   <h2>Hello github</h2>
+  
   <p>This is a simple 8‑line HTML program.</p>
+  <p>This is a simple.</p>
 </body>
 </html>
